--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,4 +1,7 @@
-﻿@page "/"
+// Ethan Kramer
+// https://dotnet.microsoft.com/learn/aspnet/blazor-tutorial/intro
+
+@page "/"
 
 <h1>Hello, world!</h1>
 
