--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -5,6 +5,6 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Hi my name is Ethan.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
